# DataMoodlibrary

./: .readthedocs.yaml  README.md  cli.py  output_transcript.txt  pyproject.toml  requirements.txt
datamood/: __init__.py  cli.py  mood_sorter.py
datamood/audio/: __init__.py  audio_mood.py
datamood/example/: audio_test_file.py  text_test1.py  text_test3.py
datamood/image/: __init__.py  image_mood.py
datamood/text/: __init__.py  test2.py  test3.py  text_mood.py  텍스트추출_저장.py
datamood/utills/: __init__.py  utils.py
datamood/utils/: utils.py
docs/: requirements.txt
docs/source/: conf.py  datamood.audio.rst  datamood.rst  datamood.text.rst  datamood.utils.rst  index.rst  modules.rst  usage.rst
