[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "datamood"
version = "0.1.0"
description = "Multimodal sentiment sorting (text + audio)"
authors = [
  { name = "Team Moodeudeung" },
]
readme = "README.md"
requires-python = ">=3.8"

dependencies = []

[project.scripts]
datamood = "datamood.cli:main"

[project.optional-dependencies]
full = [
  "SpeechRecognition",
  "konlpy",
  "yt-dlp",
  "pydub",
  "beautifulsoup4",
  "requests",
  "jpype1"
]